compiler/tests/fa/errors/const_index_write.salam
// انتظار: خطا۰۱۳
// زبان: فارسی
تابع اصلی:
    ثابت ث := [1, 2, 3] بعنوان صحیح[3]
    ث[0] = 9
پایان
